--- a/package.json
+++ b/package.json
@@ -21,5 +21,9 @@
   "bugs": {
     "url": "https://github.com/MauroJr/event-router/issues"
   },
-  "homepage": "https://github.com/MauroJr/event-router#readme"
+  "homepage": "https://github.com/MauroJr/event-router#readme",
+  "dependencies": {
+    "local-module": "^1.0.2",
+    "tofactory": "^1.0.3"
+  }
 }
