--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
   },
   "homepage": "https://github.com/MauroJr/event-router#readme",
   "dependencies": {
+    "escape-regex": "^1.0.7",
     "local-module": "^1.0.2",
-    "tofactory": "^1.0.3"
+    "tofactory": "^1.1.0"
   }
 }
