--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "engine": ">=4.2.0",
   "repository": {
     "type": "git",
     "url": "git+ssh://git@github.com/MauroJr/event-router.git"
